# whs.js-Discord-Bot

./: .dockerignore  .env  .gitignore  Cargo.toml  Config.toml  Dockerfile  dev.env
src/: commands.rs  config.rs  error.rs  grade.rs  handler.rs  main.rs  platform.rs
