[package]
name = "whs_helper_bot"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.3"
serenity = { version = "0.7", features = ["framework", "standard_framework"] }