[package]
name = "whs_helper_bot"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
toml = "0.5.6"
serde = { version = "1.0.111", features = ["derive"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
serenity = { version = "0.8.6", features = ["framework", "standard_framework"] }

[[bin]]
name = "whs_helper_bot"
path = "src/main.rs"